--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "angular": "~1.5.9",
     "angular-ui-router": "~0.3.2",
-    "jquery": "~3.1.1"
+    "jquery": "~3.1.1",
+    "lodash": "~4.17.2",
+    "bootstrap": "~3.3.7"
   }
 }
